fix: enhance list item styling for improved consistency and readability

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -191,10 +191,10 @@
     list-style-position: outside !important;
   }
  .post-content li {
-    margin-left: 5rem;
-    padding-left: 4rem;
-     list-style: initial !important;
-     list-style-position: outside !important;
+    margin-left: 5rem !important;
+    padding-left: 4rem !important;
+     list-style-type: disc !important;
+    
  }
 
  .li {
